--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyLoggedInBar.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyLoggedInBar.cshtml
@@ -1,18 +1,5 @@
 ﻿<section class="lobby-loggedIn-bar">
-	<div style="overflow: hidden; color: rgb(185, 185, 185); /*background: rgba(255,255,255,.7);*/border-top:1px solid white;border-bottom:1px solid rgb(228, 219, 219);text-align:right;">
-		
-		<span class="loggedIn-nickname">@User.Identity.Name</span>
-		@using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
-  {
-			@Html.AntiForgeryToken()
-			<a style="color: rgb(153,153,153);" href="javascript:document.getElementById('logoutForm').submit()">wyloguj</a>
-  }
-		
-	</div>
-	<div style="padding: 18px; text-align: center; max-width: 470px; margin: 0 auto; display:none;">
-		<button id="addPublicEventBtn" class="myButton-white" data-bind="click: function (data, e) { $root.showAddPublicEventPopupOnClick($element, data, e) }">Stwórz publiczne wydarzenie</button>
-		<button id="addPrivateEventBtn" class="myButton-white" data-bind="click: function (data, e) { $root.showAddPrivateEventLobbyPopupOnClick($element, data, e) }">Dodaj do kalendarza</button>
-	</div>
-
+	<div id="addPublicEventBtn" class="add-btn link" data-bind="click: function (data, e) { $root.showAddPublicEventPopupOnClick($element, data, e) }">Stwórz publiczne wydarzenie</div>
+	<div id="addPrivateEventBtn" class="add-btn link" data-bind="click: function (data, e) { $root.showAddPrivateEventLobbyPopupOnClick($element, data, e) }">Dodaj do kalendarza</div>
 </section>
 
