--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
@@ -3,7 +3,7 @@
 <div id="addNewEventContainer" class="slick-contact-form">
 
 	<div class="form-header">
-		<div id="btnClose-AddEventContainer" class="btn-close hover-cursor-pointer 1px-hover" data-bind="click: $root.closeAddNewEventPopupOnClick()">
+		<div id="btnClose-AddEventContainer" class="btn-close hover-cursor-pointer 1px-hover" data-bind="click: $root.closeAddNewEventPopupOnClick">
 			<span class="close-text">zamknij</span>
 		</div>
 	</div>
