--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -12,9 +12,9 @@
 						<div class="site-legend-border"></div>
 						<div class="site-legend-border"></div>
 					</div>
-					<span>strona glówna</span>
-					<span>kalendarz</span>
-					<span>szczegóły</span>
+					<span style="position:relative;left:2px;">Strona Glówna</span>
+					<span style="position:relative;left:2px;">| Kalendarz |</span>
+					<span style="position:relative;left:2px;">Moje Sprawy</span>
 				</div>
 				<div id="lobbyBg">
 					<img src="~/Images/kalendarzTloClear.png" alt="background" style="top: 0 !important" />
@@ -83,6 +83,7 @@
 				var $calendar = $("#calendar");
 				var $details = $("#details");
 				var $lobby = $("#lobby");
+				var eventTreeBuilder = new EventTreeBuilder();
 
 				var date = new Date();
 				$calendar.calendarWidget({
@@ -90,26 +91,29 @@
 				});
 
 				var indexViewModel = @Html.Raw(Json.Encode(@Model));
-
 				var currentWeekday = $calendar.find(".today-cell").attr("weekday");
-				var calendarViewModel = new CalendarViewModel(date.getFullYear(), date.getMonth() + 1, date.getDate(), currentWeekday, '@User.Identity.Name');							
+				var calendarViewModel = new CalendarViewModel(date.getFullYear(), date.getMonth() + 1, date.getDate(), currentWeekday, '@User.Identity.Name');	
+				
 				calendarViewModel.eventPrivacyLevels = indexViewModel.PrivacyLevels;
-				calendarViewModel.eventKinds = indexViewModel.EventKinds;
+				calendarViewModel.eventKinds = indexViewModel.EventKinds;				
+				calendarViewModel.publicEventTree = eventTreeBuilder.buildEventTree(indexViewModel.PublicEvents, calendarViewModel.setCalendarPlacementRow, calendarViewModel.publicEvents);
+				calendarViewModel.publicEventTreeCountBasedOnEventKind = eventTreeBuilder.buildEventTreeCountBasedOnEventKind(indexViewModel.PublicEventCountTree);			
 
 				if (indexViewModel.MyEvents) {
 
-					//console.log(indexViewModel.MyEvents);
+					calendarViewModel.myEventTree = eventTreeBuilder.buildEventTree(indexViewModel.MyEvents, calendarViewModel.setCalendarPlacementRow);
+					calendarViewModel.myEventTreeCountBasedOnEventKind = eventTreeBuilder.buildEventTreeCountBasedOnEventKind(indexViewModel.MyEventCountTree);
 
-					var eventTreeBuilder = new EventTreeBuilder();
-					calendarViewModel.eventTree = eventTreeBuilder.buildEventTree(indexViewModel.MyEvents, calendarViewModel.setCalendarPlacementRow);
-					calendarViewModel.eventTreeCountBasedOnEventKind = eventTreeBuilder.buildEventTreeCountBasedOnEventKind(indexViewModel.MyEventsCountTree);
+					//console.log(calendarViewModel.myEventTree);
 
-					//console.log(calendarViewModel.eventTree);
+					//console.log(calendarViewModel.publicEvents);
+					//console.log(calendarViewModel.publicEventTree);
+					//console.log(calendarViewModel.publicEventTreeCountBasedOnEventKind);
 
 					/////////////////////////////////////////////////////////////////////////
-					//assign calendarViewModel.myEvents and draw events to the calendar
+					//draw events to the calendar
 					/////////////////////////////////////////////////////////////////////////
-					var yearProp = calendarViewModel.eventTree[calendarViewModel.calendarPageDisplayDate.year()];
+					var yearProp = calendarViewModel.myEventTree[calendarViewModel.calendarPageDisplayDate.year()];
 					var events, month, nextMonth, prevMonth, event;
 
 					if (yearProp) {
@@ -120,7 +124,6 @@
 								for (var i = 0; i < events.length; i++) {
 									event = events[i];
 
-									calendarViewModel.myEvents.push(event);
 									calendarViewModel.drawEventToCalendar(event);
 								}
 							}
@@ -132,7 +135,6 @@
 								for (var i = 0; i < events.length; i++) {
 									event = events[i];
 
-									//calendarViewModel.myEvents.push(event);
 									calendarViewModel.drawEventToCalendar(event);
 								}
 							}
@@ -144,14 +146,11 @@
 								for (var i = 0; i < events.length; i++) {
 									event = events[i];
 
-									//calendarViewModel.myEvents.push(event);
 									calendarViewModel.drawEventToCalendar(event);
 								}
 							}
 						}
 					}
-
-					//console.log(calendarViewModel.myEvents);
 				}
 
 				//////////////////////////////////////////////////////////////////
@@ -211,7 +210,7 @@
 									}, 10)
 								}
 						
-								//TODO: not finished
+								//TODO: not finished set dynamic height of calendar cells (calendar to be as height as browser window)
 								//setTimeout(function(){				
 								
 								//	var height1 = $("#calendar #calendarMenuHeader").height();
