--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventSummary.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventSummary.cshtml
@@ -1,17 +1,18 @@
-﻿<section>
-	<div data-bind="foreach: myEvents" style="text-align:center;">
+﻿<div id="lobbyEventSummary">
+<div style="font-size:1.6em;color:gray;padding-bottom:10px;">Nadchodzące ogłoszenia:</div>
+	<div data-bind="foreach: publicEvents">
 		<div class="lobby-event-rectangle">
-			<div data-bind="style: { color: kind.headerColor, background: 'rgb(130,130,130)', border:'1px solid rgb(221, 221, 221)',  padding: '10px', marginBottom: '10px' }">
-				<span data-bind="text: kind.name"></span>	
+			<div data-bind="style: { color: kind.headerColor, background: 'rgb(130,130,130)', border: '1px solid rgb(221, 221, 221)', padding: '10px', marginBottom: '10px' }">
+				<span data-bind="text: kind.name"></span>
 			</div>
-			<div><span data-bind="text: name, style: { fontSize: '1.6em', lineHeight: '1', paddingBottom: '4px'} "></span></div>
-			<div>godzina rozpoczęcia: <span data-bind="text: startDate.startHour"></span><span>: </span><span data-bind=" text: startDate.startMinute"></span></div>
+			<div><span data-bind="text: name, style: { fontSize: '1.6em', lineHeight: '1', paddingBottom: '4px' }"></span></div>
+			<div>godzina rozpoczęcia: <span data-bind="text: startDate.startHour"></span><span>: </span><span data-bind="	text: startDate.startMinute"></span></div>
 			<div>godzina zakończenia: <span data-bind="text: startDate.endHour"></span><span>: </span><span data-bind="	text: startDate.endMinute"></span></div>
-			<div>data: <span data-bind="text: startDate.day"></span><span>/</span><span data-bind="	text: startDate.month"></span><span>/</span><span data-bind="text: startDate.year"></span></div>
+			<div>data: <span data-bind="text: startDate.day"></span><span>/</span><span data-bind="	text: startDate.month"></span><span>/</span><span data-bind="	text: startDate.year"></span></div>
 			<div>adres: <span data-bind="text: address.street"></span><span>, </span><span data-bind="	text: address.city"></span></div>
 		</div>
 	</div>
-</section>
 
+</div>
 
 
