--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyLoggedInBar.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyLoggedInBar.cshtml
@@ -1,5 +1,5 @@
 ﻿<section class="lobby-loggedIn-bar">
-	<div id="addPublicEventBtn" class="add-btn link" data-bind="click: function (data, e) { $root.showAddPublicEventPopupOnClick($element, data, e) }">Stwórz publiczne wydarzenie</div>
-	<div id="addPrivateEventBtn" class="add-btn link" data-bind="click: function (data, e) { $root.showAddPrivateEventLobbyPopupOnClick($element, data, e) }">Dodaj do kalendarza</div>
+	<div id="addPublicEventBtn" class="add-btn link" data-bind="click: function (data, e) { $root.showAddPublicEventPopupOnClick($element, data, e) }">Dodaj do tablicy ogłoszeń</div>
+	<div id="addPrivateEventBtn" class="add-btn link" data-bind="click: function (data, e) { $root.showAddPrivateEventLobbyPopupOnClick($element, data, e) }">Dodaj do swojego kalendarza</div>
 </section>
 
